--- a/signup.html
+++ b/signup.html
@@ -44,7 +44,7 @@
     <div class="row">
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="col">
-                <a class="navbar-brand" href="signup.html" style="font-weight: bolder; font-size: 24px; margin-left: 30px;">
+                <a class="navbar-brand" href="index.html" style="font-weight: bolder; font-size: 24px; margin-left: 30px;">
                     AIRFRANCE<img src="images/AF.png" alt="Air France" width="40px">
                 </a>
                 <div class="col">
