--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
       </div>
       <div class="col">
         <div class="card shadow-sm">
-         <img src="https://img.static-af.com/images/media/96BABE2C-6223-493C-8CCF54C2F7C552D1/source/b2c_newsblock_960x640_life01_promoen?w=960&aspect_ratio=2:1" alt="">
+         <img src="https://img.static-af.com/images/media/1A929AC2-2857-4C5F-A5EDF9C0C83C8E23/" alt="">
           <div class="card-body">
             <h4 class="card-text">Limited time-offer</h4>
             <div class="d-flex justify-content-between align-items-center">
